# sw-engineering-challenge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bloq/: admin.py  models.py  urls.py  views.py
bloq/migrations/: 0001_initial.py
core/: settings.py  urls.py
locker/: admin.py  models.py  tests.py  urls.py  views.py
locker/migrations/: 0001_initial.py
rent/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rent/migrations/: 0001_initial.py
